[metadata]
name = docker_driver
summary = A testing driver for running in docker
author = SerenaFeng
author-email = serena.feng.711@gmail.com
home-page = https://github.com/SerenaFeng/docker-driver
license = Apache-2.0
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Docker User
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    docker_driver

data_files =
#    /etc/docker_driver = etc/*
#    /usr/local/share/docker_driver = testconf/*

[entry_points]
console_scripts =
    ddr = docker_driver.shell:main
ddr =
    testcase list = docker_driver.cli.testcase:TestCaseList
    testcase show = docker_driver.cli.testcase:TestCaseShow

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
