[metadata]
name = docker-trigger
summary = A testing trigger for running in docker
author = SerenaFeng
author-email = serena.feng.711@gmail.com
home-page = https://github.com/SerenaFeng/docker-trigger
license = Apache-2.0
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Docker User
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    docker_trigger

data_files =
#    /etc/docker_trigger = etc/*
#    /usr/local/share/docker_trigger = testconf/*

[entry_points]
console_scripts =
    dtr = docker_trigger.shell:main
ddr =
    testcase list = docker_trigger.cli.testcase:TestCaseList
    testcase show = docker_trigger.cli.testcase:TestCaseShow
    testcase run = docker_trigger.cli.testcase:TestCaseRun

    testsuite list = docker_trigger.cli.testsuite:TestSuiteList
    testsuite show = docker_trigger.cli.testsuite:TestSuiteShow
    testsuite run = docker_trigger.cli.testsuite:TestSuiteRun

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
